--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe - Full Stack Developer</title>
+    <title>Fort-Polio</title>
     <meta name="description" content="Full Stack Developer specializing in modern web applications with React, Node.js, and cutting-edge technologies." />
-    <meta name="author" content="John Doe" />
+    <meta name="Me" content="Fort-Polio" />
 
-    <meta property="og:title" content="John Doe - Full Stack Developer" />
+    <!-- <meta property="og:title" content="John Doe - Full Stack Developer" />
     <meta property="og:description" content="Full Stack Developer specializing in modern web applications with React, Node.js, and cutting-edge technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
